# corona-data-donation-long-covid

./: .gitignore  Makefile  P02 - Datenspende - 15 - Long-Covid-Paper.ipynb  Plots for Long-Covid-Paper.ipynb  README.md  pyproject.toml
data/00_external/: statistic_id1365_bevoelkerung-deutschlands-nach-relevanten-altersgruppen-2020.xlsx
long_covid/: compute.py  load_from_db.py  load_raw_data.py  preprocess.py  surveydataIO.py
notebooks/: 1.0-plot_example_timeseries.ipynb  1.01-plot_example_timeseries.ipynb  1.02-plot_average_trajectories.ipynb  1.03-plot_distributions_of_vital_changes.ipynb  1.04-plot_frequencies_of_extreme_vitals.ipynb  1.05-table_with_basic_user_demographics.ipynb  1.06-plot_positive_pcr_tests_per_month.ipynb  1.07-plot_time_between_vaccination_and_infection.ipynb  1.08-plot_comparison_age_groups_datenspende_and_overall_population.ipynb  1.09-plot_example_of_computing_anomalies.ipynb  1.1-plot_example_timeseries.ipynb  1.10-plot-qq-and-boxplots.ipynb  1.10-plot-qq-plots.ipynb  1.11-compare_rhr_before_and_after_vaccination.ipynb  1.11-plot-average-trajectories-as-boxplots.ipynb  1.2-plot_average_trajectories.ipynb  1.3-plot_distributions_of_vital_changes.ipynb  1.5-table_with_basic_user_demographics.ipynb  1.7-plot_time_between_vaccination_and_infection.ipynb  1.8-plot_comparison_age_groups_datenspende_and_overall_population.ipynb  1.9-plot_example_of_computing_anomalies.ipynb  2.01-compare_rhr_before_and_after_vaccination-for-response-letter.ipynb  2.01-eq_5d_sandbox.ipynb  Make Figures.ipynb
scripts/: execute_notebooks.sh
